@@ -1,3 +1,9 @@
+2004-03-19  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (install-exec-clean): Don't remove libgettextsrc.a on
+	AIX.
+	Reported by Kouichi Hashikawa <z01a7ksy@cs.ecip.tohoku.ac.jp>.
+
 2004-03-14  Bruno Haible  <bruno@clisp.org>
 
 	* format-lisp.c (parse_upto): Add integer restriction for the dispatch
